修改有bug，调错方法了

--- a/src/main/resources/templates/myServiceImpl.java.vm
+++ b/src/main/resources/templates/myServiceImpl.java.vm
@@ -51,7 +51,7 @@ public class ${table.serviceImplName} extends ${superServiceImplClass}<${table.m
     public boolean edit(${entity}EditDTO dto){
         ${entity} edit = new ${entity}();
         BeanUtils.copyProperties(dto, edit);
-        return this.save(edit);
+        return this.updateById(edit);
     }
 
     @Override
