--- a/src/main/resources/templates/myServiceImpl.java.vm
+++ b/src/main/resources/templates/myServiceImpl.java.vm
@@ -1,5 +1,6 @@
 package ${package.ServiceImpl};
 
+import cn.hutool.core.bean.BeanUtil;
 import ${package.Entity}.*;
 import ${package.Entity}.VO.*;
 import ${package.Entity}.DTO.*;
@@ -12,6 +13,7 @@ import java.util.List;
 import ${cfg.basePackage}.common.vo.PageResult;
 import ${cfg.basePackage}.common.vo.PageWrapper;
 import ${cfg.basePackage}.utils.PageUtils;
+import com.wjh.demo.common.BusinessTargetNotExistsException;
 
 ##import com.baomidou.mybatisplus.core.metadata.IPage;
 
@@ -37,20 +39,21 @@ public class ${table.serviceImplName} extends ${superServiceImplClass}<${table.m
 
     @Override
     public ${entity}VO getDetailById(Integer id){
-        return this.getBaseMapper().selectDetailById(id);
+        ${entity}VO vo = this.getBaseMapper().selectDetailById(id);
+        if (vo == null)
+            throw new BusinessTargetNotExistsException();
+        return vo;
     }
 
     @Override
     public boolean add(${entity}AddDTO dto){
-        ${entity} add = new ${entity}();
-        BeanUtils.copyProperties(dto, add);
+        ${entity} add = BeanUtil.copyProperties(dto, ${entity}.class);
         return this.save(add);
     }
 
     @Override
     public boolean edit(${entity}EditDTO dto){
-        ${entity} edit = new ${entity}();
-        BeanUtils.copyProperties(dto, edit);
+        ${entity} edit = BeanUtil.copyProperties(dto, ${entity}.class);
         return this.updateById(edit);
     }
 
