--- a/src/main/resources/templates/myEntityVO.java.vm
+++ b/src/main/resources/templates/myEntityVO.java.vm
@@ -1,7 +1,7 @@
 package ${package.Entity}.VO;
 
 
-import ${package.Entity}.User;
+import ${package.Entity}.*;
 ###foreach($pkg in ${table.importPackages})
 ##import ${pkg};
 ###end
